# r2-dashboard

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  r2_dashboard  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy.yml  preview.yml
data/raw/: r2_orders_live_20260710-232957.csv  r2_orders_live_20260711-000808.csv  r2_orders_live_20260711-115135.csv  r2_orders_live_20260711-172051.csv  r2_orders_live_20260711-192323.csv  r2_orders_live_20260712-140544.csv  r2_orders_live_20260717-145809.csv  r2_orders_live_20260719-095130.csv  r2_orders_live_20260720-091156.csv  r2_orders_live_20260720-144655.csv  r2_orders_live_20260720-162447.csv  r2_orders_live_20260721-085910.csv  r2_orders_live_20260721-110159.csv  r2_orders_live_20260721-112736.csv  r2_orders_live_20260721-142807.csv  r2_orders_live_20260721-215235.csv  r2_orders_live_20260722-090229.csv  r2_orders_live_20260722-142534.csv  r2_orders_live_20260722-221328.csv  r2_orders_live_20260723-033507.csv  r2_orders_live_20260723-090809.csv  r2_orders_live_20260723-142253.csv  r2_orders_live_20260723-215251.csv  r2_orders_live_20260724-033147.csv  r2_reservations_live_20260710-232957.csv  r2_reservations_live_20260711-164830.csv  r2_reservations_live_20260717-145809.csv  r2_reservations_live_20260719-095130.csv  r2_reservations_live_20260719-150941.csv  r2_reservations_live_20260720-144655.csv  r2_reservations_live_20260720-192952.csv  (+8 more)
src/: config.py  pipeline.py
src/conf/: delivery.yaml  geo.yaml  (+4 more)
tests/: test_parsing.py
worker/: worker.js  wrangler.toml
(+25 files in other folders)
